# TRIPSAFE-KNOWLEDGE-BOT-VERSION-LIVE

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  README.md  RUNBOOK-AWS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/v1/: __init__.py  auth.py  chat.py
app/api/v1/admin/: __init__.py  activity_log.py  chat_logs.py  dashboard.py  integrations.py  knowledge.py  prompts.py  users.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
app/models/: __init__.py  activity_log.py  chat.py  index_build.py  knowledge_file.py  refresh_token.py  setting.py  system_prompt.py  user.py
app/schemas/: admin.py  auth.py  chat.py
app/services/: activity.py  auth.py  indexer.py  rag.py  s3_store.py  settings_store.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  guards.tsx
frontend/src/components/: AccountMenu.tsx  AppHeader.tsx  Badge.tsx  Button.tsx  Card.tsx  ChatSidebar.tsx  Input.tsx  Logo.tsx  MarkdownMessage.tsx  Spinner.tsx
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx
frontend/src/pages/admin/: ActivityPage.tsx  AdminLayout.tsx  ChatLogsPage.tsx  DashboardPage.tsx  IntegrationsPage.tsx  KnowledgePage.tsx  (+2 more)
frontend/src/styles/: globals.css  tokens.css
scripts/: build_index.py
